--- a/sprints/templates/sprints/base.html
+++ b/sprints/templates/sprints/base.html
@@ -8,10 +8,14 @@
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ext/css/menu.css" media="screen">
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ext/css/summary.css" media="screen">
 
+    <script type="text/javascript" src="{{ MEDIA_URL }}ext/js/ext.js" charset="utf-8"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}ext/js/summary.js" charset="utf-8"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/sprint_detail.js" charset="utf-8"></script>
 
     <script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/jquery.sparkline.js" charset="utf-8"></script>
+
+    <script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/excanvas.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/jquery.flot.js" charset="utf-8"></script>
 {% endblock %}
 
 {% block title %}viewing sprint {{ sprint }}{% endblock %}
