--- a/timeline/templates/timeline/index.html
+++ b/timeline/templates/timeline/index.html
@@ -16,35 +16,38 @@
 {% endblock %}
 
 {% block body %}
-<div id="timeline-content-container">
-    <div id="timeline-top-bar" style="display: none">
-        <label for="notifications">
-            <input id="timeline-notify-checkbox" type="checkbox" />
-            Notify me when new items are added
-        </label>
-    </div>
-    <ul id="timeline-event-container" data-start-after="{{ new_start_after }}"
-        data-earlier-than="{{ new_earlier_than }}">
-{% for e in events %}
-        <li class="timeline-event" data-id="{{ e.pk }}" data-timestamp="{{ e.date|utcunixtimestamp }}">
-            <div class="timeline-event-arrow"></div>
-            <p class="timeline-date"></p>
-            <p class="timeline-message">{{ e.get_message_for_display|safe }}</p>
-            <p class="timeline-event-task">{{ e.get_task_for_display }}</p>
-{% if e.comment %}
-            <p class="timeline-event-comment">{{ e.comment|linebreaksbr }}</p>
-{% endif %}
-        </li>
-{% endfor %}
-    </ul>
-    <div id="timeline-sidebar">
-        <div id="timeline-sidebar-event">
-        </div>
-        <div id="timeline-sidebar-detail">
-        </div>
-    </div>
-    <div style="clear: both;"></div>
+<div id="timeline-top-bar" style="display: none">
+    <label for="notifications">
+        <input id="timeline-notify-checkbox" type="checkbox" />
+        Notify me when new items are added
+    </label>
 </div>
+<table id="timeline-content-container" cellpadding="0" cellspacing="0">
+    <tr>
+        <td>
+            <ul id="timeline-event-container" data-start-after="{{ new_start_after }}"
+                data-earlier-than="{{ new_earlier_than }}">
+{% for e in events %}
+                <li class="timeline-event" data-id="{{ e.pk }}" data-timestamp="{{ e.date|utcunixtimestamp }}">
+                    <div class="timeline-event-arrow"></div>
+                    <p class="timeline-date"></p>
+                    <p class="timeline-message">{{ e.get_message_for_display|safe }}</p>
+                    <p class="timeline-event-task">{{ e.get_task_for_display }}</p>
+{% if e.comment %}
+                    <p class="timeline-event-comment">{{ e.comment|linebreaksbr }}</p>
+{% endif %}
+                </li>
+{% endfor %}
+            </ul>
+        </td>
+        <td valign="top">
+            <div id="timeline-sidebar">
+                <div id="timeline-sidebar-event"></div>
+                <div id="timeline-sidebar-detail"></div>
+            </div>
+        </td>
+    </tr>
+</table>
 {% endblock %}
 
 {% block extra_body %}
