Make the sidebar follow the user as they scroll

--- a/site_media/berserk/css/screen.css
+++ b/site_media/berserk/css/screen.css
@@ -358,6 +358,9 @@ img a {
     width: 479px;
     background-color: #9FB87A;
     padding: 0;
+
+    position: relative;
+    top: 0;
 }
 
 #timeline-sidebar-event {
