--- a/timeline/templates/timeline/index.html
+++ b/timeline/templates/timeline/index.html
@@ -4,6 +4,7 @@
 {% load utcunixtimestamp %}
 
 {% block extra_head %}
+    <script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/jquery.scroll.js" charset="utf-8"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/jquery.cookie.js" charset="utf-8"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/jquery.hotkeys.js" charset="utf-8"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}berserk/js/dateformatter.js" charset="utf-8"></script>
