--- a/site_media/berserk/css/screen.css
+++ b/site_media/berserk/css/screen.css
@@ -353,7 +353,7 @@ img a {
 
 #timeline-top-bar {
     text-align: right;
-    margin-bottom: 5px;
+    padding-bottom: 5px;
 }
 
 #timeline-sidebar {
