Convert newlines to <p>s in changes list

--- a/timeline/templates/timeline/fogbugz_event_detail.html
+++ b/timeline/templates/timeline/fogbugz_event_detail.html
@@ -23,7 +23,7 @@
 {% for event in events %}
 <div class="fogbugz-detail-event">
     <div class="fogbugz-detail-description">{{ event.description }} <small>{{ event.date }}</small></div>
-    <div class="fogbugz-detail-change">{{ event.changes }}</div>
+    <div class="fogbugz-detail-change">{{ event.changes|linebreaks }}</div>
     <div class="fogbugz-detail-html">
     {{ event.html|safe }}
     </div>
