--- a/timeline/templates/timeline/index.html
+++ b/timeline/templates/timeline/index.html
@@ -46,6 +46,7 @@
         <td valign="top">
             <div id="timeline-sidebar">
                 <div id="timeline-sidebar-event"></div>
+                <div id="timeline-sidebar-spacebox"></div>
                 <div id="timeline-sidebar-detail"></div>
             </div>
         </td>
