--- a/timeline/templates/timeline/index.html
+++ b/timeline/templates/timeline/index.html
@@ -48,6 +48,7 @@
                 <div id="timeline-sidebar-event"></div>
                 <div id="timeline-sidebar-spacebox"></div>
                 <div id="timeline-sidebar-detail"></div>
+                <div id="timeline-sidebar-commands"></div>
             </div>
         </td>
     </tr>
