--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,8 @@
         </div>
         <div class="clear"></div>
     </div>
+{% block after_header %}
+{% endblock %}
 {% block banner-container %}
     <div id="banner">
 {% block banner %}
