--- a/templates/base.html
+++ b/templates/base.html
@@ -38,14 +38,18 @@
 {% endblock %}
     </div>
 {% endblock %}
+{% block navigation-container %}
     <div id="navigation">
 {% block navigation %}
 {% endblock %}
     </div>
+{% endblock %}
+{% block body-container %}
     <div id="body">
 {% block body %}
 {% endblock %}
     </div>
+{% endblock %}
     <div id="footer">
         <table>
             <tr>
